...
                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="180" id="uqg-sv-xgx"/>
                                                </constraints>
                                                <state key="normal" title="Login">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="12345678" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8J0-l3-0AI">
                                <rect key="frame" x="67" y="291" width="280" height="34"/>
                                <constraints>
...
                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="MarcoPolo@gmail.com" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UAm-Gf-Sla">
                                <rect key="frame" x="67" y="219" width="280" height="34"/>
                                <constraints>
...
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Menu" id="aV7-SY-u7p"/>
                    <navigationItem key="navigationItem" id="Qe2-vz-4rf"/>
                    <connections>
...
                                <rect key="frame" x="20" y="221.5" width="374" height="52"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Moje testy" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Osb-Sd-9Y9">
                                        <rect key="frame" x="8" y="13" width="358" height="26"/>
                                        <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="22"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <state key="normal" title="Utwórz test"/>
                                <connections>
                                    <segue destination="Xbp-MZ-mKX" kind="show" id="GRe-3h-3Fd"/>
...
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Stats" selectedImage="chart.pie.fill" catalog="system" id="58g-Cf-K5q">
                        <color key="badgeColor" systemColor="linkColor"/>
                    </tabBarItem>
...
