//
//  Success.swift
//  TestGuru!
//
//  Created by Piotr Tocicki on 08/10/2020.
//

import Foundation

struct SuccessDescription {
    
    static let ok = "OK"
    static let success = "Success"
    static let registerSuccess = "Registered successfully."
    static let signInSuccess = "Login successful"
}
