...
                }
                
                self?.popularTests = popularTests
                completion(true)
                
            } else {
                print("Error")
                completion(false)
            }
        }
    }
    
    private func setupDelegates() {
...
