...
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="280" id="RC6-Em-xua"/>
                                    <constraint firstAttribute="height" constant="44" id="idD-n3-fjh"/>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="280" id="lM9-nP-3zr"/>
                                </constraints>
                                <state key="normal" title="Zaloguj">
                                    <color key="titleColor" systemColor="linkColor"/>
                                </state>
                                <connections>
                                    <action selector="loginButtonPressed:" destination="U1T-wA-4aM" eventType="touchUpInside" id="TlP-6q-G1v"/>
                                </connections>
                            </button>
...
